crates/pardosa-schema/tests/compile_fail/evt_008.stderr
error: EVT-008: GenomeSafe: #[serde(default)] is not supported on type. #[serde(default)] is silently inert in genome format because all fields are always present on the wire. Rejected to prevent misleading annotations (ADR-029).
 --> tests/compile_fail/evt_008.rs:4:9
  |
4 | #[serde(default)]
  |         ^^^^^^^
